# chargeback-resolution

./: .gitignore  README.md  chargeback-solution.uipx
chargeback-resolution/: case-plan.json  caseplan.json  caseplan.json.bpmn  entry-points.json  operate.json  project.uiproj
drafter-agent/: agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
drafter-agent/__uipath/: state.db
probability-agent/: entry-points.json  langgraph.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
probability-agent/.uipath/: .telemetry.json
resources/solution_folder/package/: chargeback-resolution.json  drafter-agent.json  probability-agent.json  scorer-agent.json  strategy-agent.json  stripe-evidence-agent.json  woo-evidence-agent.json
scorer-agent/: agent.json  flow-layout.json  project.uiproj
scorer-agent/.agent-builder/: agent.json  entry-points.json
scorer-agent/evals/eval-sets/: evaluation-set-default.json
scorer-agent/evals/evaluators/: evaluator-default-trajectory.json  evaluator-default.json
strategy-agent/: agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
strategy-agent/.uipath/: .telemetry.json
stripe-evidence-agent/: bindings.json  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml
stripe-evidence-agent/.agent/: SDK_REFERENCE.md
stripe-evidence-agent/.uipath/: .telemetry.json
woo-evidence-agent/: bindings.json  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml
woo-evidence-agent/.uipath/: .telemetry.json
(+7 files in other folders)
